# channels-demultiplexer

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.rst  codecov.yml  pytest.ini  requirements.txt  setup.cfg  tox.ini
channels_demultiplexer/: __init__.py  apps.py  conf.py  demultiplexer.py  queue.py
docs/: requirements.txt
docs/source/: channels_demultiplexer.apps.rst  channels_demultiplexer.conf.rst  channels_demultiplexer.demultiplexer.rst  channels_demultiplexer.queue.rst  channels_demultiplexer.rst  conf.py  configuration.rst  index.rst  installation.rst  modules.rst  routing.rst  usage.rst
examples/: demultiplexer.py  routing.py
tests/: settings.py  tests.py
