[metadata]
name = channels-demultiplexer
version = 1.0
url = https://github.com/csdenboer/channels-demultiplexer
author = Christian den Boer
description = Demultiplexer for Django Channels 2
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://channels-demultiplexer.readthedocs.io/
    Source = https://github.com/csdenboer/channels-demultiplexer
    Tracker = https://github.com/csdenboer/channels-demultiplexer/issues

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    channels >= 2.0.0
    django-appconf >= 1.0.4